# Sensor-Fusion-LIO-Simplified

./: CMakeLists.txt  README.md
include/: eskf.hpp  icp.hpp  imu_reader.hpp  kitti_reader.hpp  preprocessor.hpp  types.hpp
src/: eskf.cpp  icp.cpp  imu_reader.cpp  kitti_reader.cpp  main.cpp  preprocessor.cpp  test_kitti.cpp
viz/: render_video.py
